feat(gradle): update gradle configuration.